--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Test env
+      shell: env
+
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
