--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Test env
-      shell: env
+      run: env
 
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
