refactor(integration_tests): move environment variable usage from dbt_project.yml to integration_tests.yml for better encapsulation fix(integration_tests): remove hardcoded database and schema names from dbt_project.yml to allow for dynamic configuration

--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -35,4 +35,13 @@ jobs:
         dbt deps
 
     - name: Integration Test - Snowflake
-      run: cd integration_tests && dbt build --target snowflake
+      run: |
+      cd integration_tests
+      dbt build --target snowflake --vars "
+      databricks_billing_database: $SNOWFLAKE_TEST_DATABASE
+      databricks_billing_schema: $SNOWFLAKE_TEST_SCHEMA
+      seeds:
+        databricks_billing:
+          +database: $SNOWFLAKE_TEST_DATABASE
+          +schema: $SNOWFLAKE_TEST_SCHEMA
+      "
