--- a/integration_tests/profiles.yml
+++ b/integration_tests/profiles.yml
@@ -11,3 +11,12 @@ integration_tests:
       warehouse: "{{ env_var('SNOWFLAKE_TEST_WAREHOUSE') }}"
       schema: "{{ env_var('SNOWFLAKE_TEST_SCHEMA') }}"
       threads: 5
+
+    databricks:
+      type: databricks
+      catalog: "{{ env_var('DATABRICKS_TEST_CATALOG') }}"
+      schema: "{{ env_var('DATABRICKS_TEST_SCHEMA') }}"
+      host: "{{ env_var('DATABRICKS_TEST_HOST') }}"
+      http_path: "{{ env_var('DATABRICKS_TEST_HTTP_PATH') }}"
+      token: "{{ env_var('DATABRICKS_TEST_TOKEN') }}"
+      threads: 5
