ci(integration_tests.yml): add continue-on-error flag to Snowflake and Databricks tests to prevent workflow failure on single test failure

--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -50,6 +50,7 @@ jobs:
             +database: $SNOWFLAKE_TEST_DATABASE
             +schema: $SNOWFLAKE_TEST_SCHEMA
         "
+      continue-on-error: true
 
     - name: Integration Test - Databricks
       run: |
@@ -62,3 +63,4 @@ jobs:
             +database: $DATABRICKS_TEST_CATALOG
             +schema: $DATABRICKS_TEST_SCHEMA
         "
+      continue-on-error: true
