fix(integration_tests.yml): change CI/CD trigger branch from feature/add-ci-cd to main for production readiness

--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -3,7 +3,7 @@ name: Integration Tests on Databricks Billing
 on:
   push:
     branches:
-      - feature/add-ci-cd
+      - main
 
 jobs:
   build:
