--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -42,14 +42,14 @@ jobs:
           BRANCH_NAME="${{ steps.getbranch.outputs.BRANCH }}"
           CURRENT_VERSION="${{ steps.gettag.outputs.TAG }}"
           IFS='.' read -ra VERSION_PARTS <<< "$CURRENT_VERSION"
-          if [[ $BRANCH_NAME =~ ^release/ ]]; then
+          if [[ $BRANCH_NAME =~ ^(major|release|Major|Release)/ ]]; then
             VERSION_PARTS[0]=$((VERSION_PARTS[0] + 1))
             VERSION_PARTS[1]=0
             VERSION_PARTS[2]=0
-          elif [[ $BRANCH_NAME =~ ^feature/ ]]; then
+          elif [[ $BRANCH_NAME =~ ^(feature|minor|Feature|Minor)/ ]]; then
             VERSION_PARTS[1]=$((VERSION_PARTS[1] + 1))
             VERSION_PARTS[2]=0
-          elif [[ $BRANCH_NAME =~ ^patch/ ]]; then
+          elif [[ $BRANCH_NAME =~ ^(patch|fix|hotfix|Patch|Fix|Hotfix)/ ]]; then
             VERSION_PARTS[2]=$((VERSION_PARTS[2] + 1))
           fi
           NEXT_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
